# confluence-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USAGE.md
examples/: debug_chunks.py  quickstart.py  test_bedrock_s3vectors.py  test_full_space.py  test_image_description.py
src/confluence_chatbot/: __init__.py  cli.py  core.py
src/confluence_chatbot/embedding/: __init__.py  base.py  bedrock.py  sentence_transformer.py
src/confluence_chatbot/generation/: __init__.py  base.py  bedrock_llm.py  ollama_llm.py
src/confluence_chatbot/ingest/: __init__.py  chunker.py  confluence_client.py  sync_manager.py
src/confluence_chatbot/vector_store/: __init__.py  base.py  faiss_store.py  s3_vectors.py
src/confluence_rag/: __init__.py  cli.py  core.py  models.py
src/confluence_rag/embedding/: __init__.py  base.py  bedrock.py  sentence_transformer.py
src/confluence_rag/generation/: __init__.py  base.py  bedrock_llm.py  ollama_llm.py
src/confluence_rag/ingest/: __init__.py  chunker.py  confluence_client.py  html_parser.py  image_describer.py  sync_manager.py
src/confluence_rag/vector_store/: __init__.py  base.py  faiss_store.py  s3_vectors.py
