[project]
name = "confluence-chatbot"
version = "0.1.0"
description = "Turn your Confluence docs into an AI chatbot in 5 minutes. Smart chunking, diagram support, and local or AWS deployment."
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Prashant Singh"},
]
readme = "README.md"
keywords = ["rag", "confluence", "chatbot", "embeddings", "s3-vectors", "llm", "ollama", "bedrock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "boto3>=1.35.0",
    "atlassian-python-api>=3.41.0",
    "beautifulsoup4>=4.12.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Local embedding model (BAAI/bge-large, MiniLM, etc.) — pulls PyTorch (~800MB)
local = ["sentence-transformers>=3.0.0", "faiss-cpu>=1.8.0"]
# Local LLM + vision via Ollama (Llama, LLaVA)
ollama = ["ollama>=0.3.0"]
# AWS Bedrock (Titan embeddings + Claude) — no extra deps, uses boto3
bedrock = []
# Everything for full local setup
all = ["sentence-transformers>=3.0.0", "faiss-cpu>=1.8.0", "ollama>=0.3.0"]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/pr-ashant-singh/confluence-chatbot"
Repository = "https://github.com/pr-ashant-singh/confluence-chatbot"

[project.scripts]
confluence-chatbot = "confluence_rag.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
